--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,18 @@
-{
-}
+{"background.enabled": false,
+    "background.useDefault": true,
+    "background.customImages": [
+    "file:///D:/like.jpg"
+    ],
+    "background.style": {
+    "content": "‘‘",
+    "pointer-events": "none",
+    "position": "absolute",
+    "z-index": "99999",
+    "width": "100%",
+    "height": "100%",
+    "background-position": "center",
+    "background-repeat": "no-repeat",
+    "background-size": "100%,100%",
+    "opacity": 0.0
+    }
+
